added conclusion for wheel remodel

--- a/src/pug/blog/report_21.pug
+++ b/src/pug/blog/report_21.pug
@@ -23,7 +23,7 @@ block content
   p In order to make the scroll-wheel more stable (or at least significantly reduce any "wobbling"), and to make sure that it is much easier to print, we have re-designed our model.
   p We also used this opportunity to experiment with build123d, making this a proper CAD design, while also enabling us to see differences (and thus bugs) in new versions more easily.
   img.mt(src='/static/blog/scrollwheel_evolution.jpg' width='400px')
-  p The results can now be found in #[+ax('https://github.com/inputlabs/prototypes_cad') our github]. 
+  p The results can now be found in #[+ax('https://github.com/inputlabs/prototypes_cad') our github] and are currently being tested. If no further issues are found, this will become part of the next 3D model release.
   hr
 
   p - Marcos and Michael <3
