--- a/src/pug/blog/report_21.pug
+++ b/src/pug/blog/report_21.pug
@@ -8,7 +8,7 @@ block content
   +news_header('8 March 2023', 'patents', '')
 
   h3 Wireless Alpakka
-  p After several hundreds of hours and even with the support from Bluekitchen, we have at least for now come to the conclusion that the Raspberry Pi Pico-W in combination with the currently available drivers and  Bluetooth stack are currently not sufficiently mature for a good gaming experience. We have thus started to pursue other options for the wireless Alpakka.
+  p After several hundreds of hours and even with the support from Bluekitchen, we have at least for now come to the conclusion that the Raspberry Pi Pico-W in combination with the currently available drivers and  Bluetooth stack are not sufficiently mature for a good gaming experience.
   img.mt(src='/static/img/wireless_setup.jpg' width='400px')
 
   p We have instead started to look into other options to provide a wireless experience, such as
