added conclusion for wheel remodel

--- a/src/pug/blog/report_21.pug
+++ b/src/pug/blog/report_21.pug
@@ -20,7 +20,7 @@ block content
 
   h3 Scrollwheel redesign
   p For a while now, we have been less than satisfied with the quality of our 3D printed scrollwheel of the Alpakka.
-  p In order to make the scroll-wheel more stable (or at least significantly reduce any "wobbling"), and to make sure that it is much easier to print, we have re-designed our model.
+  p In order to make the scroll-wheel more stable (or at least significantly reduce any "wobbling"), and to make sure that it is much easier to print, we have re-designed our model. While it still consists of three parts (wheel, core and holder), the axle around which every rotates is now in the same piece, making everything significantly more stable.
   p We also used this opportunity to experiment with build123d, making this a proper CAD design, while also enabling us to see differences (and thus bugs) in new versions more easily.
   img.mt(src='/static/blog/scrollwheel_evolution.jpg' width='400px')
   p The results can now be found in #[+ax('https://github.com/inputlabs/prototypes_cad') our github] and are currently being tested. If no further issues are found, this will become part of the next 3D model release.
