fix typo from original (sic)

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -35,10 +35,10 @@ block content
       //- li: i "This might be a game changer"
       li: i "You would definitely be running circles around people that are using the right thumbstick."
 
-    li #[+ax('https://hackspace.raspberrypi.com/articles/alpakka-3d-printed-controller-review') Simracing-PC] : DIY project: Alpakka controller by Input Labs
+    li #[+ax('https://simracing-pc.de/en/2023/09/05/diy-project-alpakka-controller-by-input-labs-review/') Simracing-PC] : DIY project: Alpakka controller by Input Labs
     ul
       li: i "The central element around the Alpakka controller is the community."
-      li: i " The two gyrto-sensors work much(!) more precisely than you know it from the gyro-control in Mario Kart, for example. There is also no noticeable input lag, which makes the operation very comfortable."
+      li: i "The two gyro-sensors work much(!) more precisely than you know it from the gyro-control in Mario Kart, for example. There is also no noticeable input lag, which makes the operation very comfortable."
       li: i "Especially for sim racers, it clearly stands out from the many other standard controllers and is a lot of fun."
 
     li #[+ax('https://www.youtube.com/watch?v=GehkHsNhwGA') RambleCan] #[em (video)] Alpakka Dual Gyro Controller Impressions -【Warhammer 40k: Boltgun】
