--- a/src/pug/blog/report_21.pug
+++ b/src/pug/blog/report_21.pug
@@ -8,22 +8,40 @@ block content
   +news_header('8 March 2023', 'patents', '')
 
   h3 Wireless Alpakka
-  p After several hundreds of hours and even with the support from Bluekitchen, we have at least for now come to the conclusion that the Raspberry Pi Pico-W in combination with the currently available drivers and  Bluetooth stack are not sufficiently mature for a good gaming experience.
-  img.mt(src='/static/img/wireless_setup.jpg' width='400px')
+  p For the last months we have been researching (and developing) the wireless functionality on the Alpakka controller, originally we decided to continue using the #[em Raspberry Pi Pico], but moving to the #[em Pico-W] variant. Our initial work was to validate a potential BT solution, focusing on 4 key requirements:
 
-  p We have instead started to look into other options to provide a wireless experience, such as
+  h4 Latency
+  p Pico-W to Pico-W latency tests demostrated that, after some tuning, BT can achieve latencies down to #[em 4 milliseconds]. So in this regard BT had an acceptable performance for gaming.
+
+  h4 Interoperability
+  p One of the selling points of BT is that it works everywhere, unfortunately our tests have shown that even if you have a device that is following the BT specs, the results may be very different depending on which dongle is being used, which operating system, which drivers, etc. A workaround for this would be using a #[em second Pico-W as a dongle], which would be inconvenient but acceptable, as most gamer PC peripherals use custom dongles.
+
+  h4 Battery live
+  p We only conducted a single test with a wireless Alpakka prototype, in which we played for #[em 60 minutes], and a #[em 1200 mAh] battery went from #[em 4.18V to 4.12V], this was not representative of how long the battery would last for real, as battery voltage drop is not linear, but gives us confidence that 1200 mAh should be enough for a few gaming sessions, even in the current state of the firmware without power-saving optimizations.
+
+  h4 Consistency
+  p Unfortunately this is were the experiments with BT on the Pico-W failed to meet our requirements, after hundreds of hours trying, many tweaks, and even with the help of BlueKitchen devs, we were unable to get rid of #[em latency spikes] that often went into 20+ milliseconds, with big spikes up to 60+ milliseconds, that completely #[em ruined the gaming experience] with regular lagging.
+
+  img.mt.mr(src='/static/blog/wireless_setup.jpg' width='400px')
+  img.mt(src='/static/blog/wireless_prototype.jpg' width='400px')
+
+  h4 Moving forward
+
+  p We decided to #[em pause] (at least temporally) the research of a #[em BT-based] wireless Alpakka, and instead started to look into other options:
   ul
-    li communication between the Alpakka and a Pico-W dongle over wireless LAN (802.11), including Wi-Fi Direct
-    li other forms of wireless communication between the Pico-W in the Alpakka and a Pico-W dongle
-    li using a different communication chip than the Infineon CYW43439, such as an SOC from Nordic Semiconductors, in combination with the Raspbery Pi Pico and a corresponding dongle
+    li Experiment with the the #[em WLAN 4] features of the Pico-W, which in theory can also achieve very low latencies, but may be more prone to network congestion.
+    li Keep the normal Pico but introduce a dedicated SPI #[em RF radio chip], which would also require to design our own dongle from scratch.
+    li Completely redesign the Alpakka away from Raspberry, into either #[em ESP32 or Nordic] solutions. Which would require a significant amount of work, and dealing with backwards compatibility.
+    li Wait for potential Raspberry Pi Pico (and libraries) #[em updates] that improve the consistency and interoperability of the BT solution.
+    li Wait for a potential #[em Raspberry Pico 2.0], with better wireless features (we can only hope).
   hr
 
-  h3 Scrollwheel redesign
-  p For a while now, we have been less than satisfied with the quality of our 3D printed scrollwheel of the Alpakka.
-  p In order to make the scroll-wheel more stable (or at least significantly reduce any "wobbling"), and to make sure that it is much easier to print, we have re-designed our model. While it still consists of three parts (wheel, core and holder), the axle around which every rotates is now in the same piece, making everything significantly more stable.
-  p We also used this opportunity to experiment with build123d, making this a proper CAD design, while also enabling us to see differences (and thus bugs) in new versions more easily.
-  img.mt(src='/static/blog/scrollwheel_evolution.jpg' width='400px')
-  p The results can now be found in #[+ax('https://github.com/inputlabs/prototypes_cad') our github] and are currently being tested. If no further issues are found, this will become part of the next 3D model release.
+  h3 Scroll-wheel redesign
+  p We have redesigned the scroll-wheel model, in order to make it more stable and reduce any #[em "wobbling"]. While it still consists of three parts (wheel, core and holder), the axle around in both sides is now in the same piece. Additionally the core is now much easier to assemble and disassemble too.
+  p We also used this opportunity to experiment with #[+ax("https://build123d.readthedocs.io/en/latest/index.html") Build123d], making this a proper CAD design, while also enabling us to review differences (and spot bugs) in new versions more easily.
+  img.mt.mr(src='/static/blog/scrollwheel_b123d.png' height='310px')
+  img.mt(src='/static/blog/scrollwheel_evolution.jpg' height='310px')
+  p The results can now be found in #[+ax('https://github.com/inputlabs/prototypes_cad') CAD prototypes] repo and are currently being tested. If no further issues are found, we plan to gradually integrate Build123d models with our Blender designs, and potentially replace Blender completely in the long term.
   hr
 
   p - Marcos and Michael <3
