--- a/src/pug/blog/report_21.pug
+++ b/src/pug/blog/report_21.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #21
-  +news_header('8 March 2024', 'patents', '')
+  +news_header('8 March 2024', 'report_20', 'report_22')
 
   h3 Wireless Alpakka
   p For the last months we have been researching (and developing) the wireless functionality on the Alpakka controller. Originally we decided to continue using the #[em Raspberry Pi Pico], but moving to the #[em Pico-W] variant. Our initial work was to validate a potential BT solution, focusing on 4 key requirements:
