--- a/src/pug/blog/reports_all.pug
+++ b/src/pug/blog/reports_all.pug
@@ -8,6 +8,7 @@ block content
   hr
 
   ul
+    li: +a('report_22') Progress report 22
     li: +a('report_21') Progress report 21
     li: +a('report_20') Progress report 20
     li: +a('report_19') Progress report 19
