--- a/src/pug/blog/report_22.pug
+++ b/src/pug/blog/report_22.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #22
-  +news_header('23 April 2024', 'report_21', '')
+  +news_header('23 April 2024', 'report_21', 'report_23')
 
   h3 Migration from Blender to Build123d
   p We decided to start using #[+ax('https://build123d.readthedocs.io') Build123d] as our main modelling solution. The original idea of using #[em Blender as a CAD] app did not turn out to be very popular.
