Rephrased some of the issues

--- a/src/pug/blog/report_23.pug
+++ b/src/pug/blog/report_23.pug
@@ -60,8 +60,8 @@ block content
     li #[em USB-C] connector.
     li Board-to-board #[em snap-in connectors] so it can be attached to a main board without soldering.
     li Castellated pins for UART.
-    li Unfortunately USB was unusable due to design error.
-    li We realized that the USB-C receptacle was 0.2 millimeters too tall.
+    li Unfortunately USB was unusable due to a problem with the capacitors.
+    li USB-C receptacle was also 0.2 millimeters taller than expected.
 
   h4 Connector breakout test
   ul
