Component releases link to all releases pages

--- a/src/pug/alpakka/components.pug
+++ b/src/pug/alpakka/components.pug
@@ -29,7 +29,7 @@ block page
           td: +ax('https://github.com/inputlabs/alpakka_pcb') GitHub
         tr
           td Alpakka PCB ready-to-order files
-          td: +ax('https://github.com/inputlabs/alpakka_pcb/releases/latest') GitHub
+          td: +ax('https://github.com/inputlabs/alpakka_pcb/releases') GitHub
         tr
           td Alpakka PCB (Partially soldered)
           td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-pcb') Input Labs shop
@@ -46,7 +46,7 @@ block page
           td: +ax('https://github.com/inputlabs/alpakka_case') GitHub
         tr
           td STL and M3F files for 3D printing
-          td: +ax('https://github.com/inputlabs/alpakka_case/releases/latest') GitHub
+          td: +ax('https://github.com/inputlabs/alpakka_case/releases') GitHub
         tr
           td Front case
           td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-front-case') Input Labs shop
@@ -130,5 +130,5 @@ block page
 
     div.box
       h2 About sourcing from Input Labs
-      p By getting some of the components and materials directly from #[+ax('https://inputlabs.squarespace.com') Input Labs Distribution], you help us to continue doing the research we do, and to keep releasing awesome open-source and accessible controllers for everybody.
+      p By getting some of the components and materials directly from #[+ax('https://inputlabs.squarespace.com') Input Labs Distribution] shop, you help us to continue doing the research we do, and to keep releasing awesome open-source and accessible controllers for everybody.
       p Also, it increases your charisma by 10 points.
