--- a/src/pug/blog/report_23.pug
+++ b/src/pug/blog/report_23.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #23
-  +news_header('14 June 2024', 'report_22', '')
+  +news_header('14 June 2024', 'report_22', 'report_24')
 
   h3 Firmware and Ctrl app 0.96.0
   p We released #[+ax(org.fw_release+'0.96.0') f0.96.0] firmware, and Ctrl app #[+ax(org.ctrl_release+'0.96.0') a0.96.0]. The main new features are:
