--- a/src/pug/blog/reports_all.pug
+++ b/src/pug/blog/reports_all.pug
@@ -8,6 +8,7 @@ block content
   hr
 
   ul
+    li: +a('report_24') Progress report 24
     li: +a('report_23') Progress report 23
     li: +a('report_22') Progress report 22
     li: +a('report_21') Progress report 21
