minor update after CAD release

--- a/src/pug/blog/report_24.pug
+++ b/src/pug/blog/report_24.pug
@@ -26,7 +26,7 @@ block content
     'medium inline',
   )
 
-  p The #[em ABXY], #[em D-Pad] and #[em Select buttons] were ported directly from Blender to beautiful #[+ax('https://build123d.readthedocs.io') build123d] #[+ax('https://github.com/inputlabs/alpakka_case/ ...fix after release ... /build123d/button_abxy.py') Python code].
+  p The #[em ABXY], #[em D-Pad] and #[em Select buttons] were ported directly from Blender to beautiful #[+ax('https://build123d.readthedocs.io') build123d] #[+ax('https://github.com/inputlabs/alpakka_case/tree/main/build123d/button_abxy.py') Python code].
 
   +figure(
     '',
@@ -53,11 +53,18 @@ block content
   hr
 
   h3 Wireless custom RF prototypes
+  p ...
   p Special thanks to Fabio!
+  hr
+
+  h3 Complete Alpakka sets in the shop
+  p A number of people had to confirm with us, which components are required to build a complete Alpakka. To make it easier, we created suitable #[+ax('https://inputlabs.squarespace.com/everyone/p/alpakka-kit-assembly') sets in our distribution channel].
+  p You can still do the assembly (or even the soldering, if you wish), but now you get all the components you need with one simple click.
   hr
 
   h3 More than a thousand Discord members
   p In July we exceeded the magic number of one thousand members on Discord.
+  p Thank you all!!!
   hr
 
   p - Marcos and Michael <3
