Unified devices title widget

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,10 +10,10 @@ block page
     div.box
       h2 Open source
       p Input Labs does public research on videogame controllers, and make open source (software) and Creative Commons (hardware) designs available for everyone.
-      p Use the #[+a('/devices') Reference Designs] to build your own controller, or modify them for your special needs, preferences, or competitive requirements.
+      p Use the #[+a('/alpakka') Reference Designs] to build your own controller, or modify them for your special needs, preferences, or competitive requirements.
 
     div.box.image.colored.blend
-      a.img(href='/devices')
+      a.img(href='/alpakka')
         img(src='/static/img/index.jpg' width='100%' style='filter:grayscale(1)')
 
     div.box
