--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -32,6 +32,7 @@
     db:            '/db/stats',
     contribute:    '/contribute/open_source',
     blog:          '/blog/report_24',
+    devices:       '/alpakka',
     alpakkaManual: '/alpakka/manual/mouse',
   }
 
@@ -48,7 +49,7 @@ mixin nav
       if (name=='devices' && devices.includes(SECTION)) return 'active'
       return ''
     }
-  div.tab(class=active('devices')):    +a('/devices')          Devices
+  div.tab(class=active('devices')):    +a('/alpakka')          Devices
   div.tab(class=active('contribute')): +a(redirect.contribute) Contribute
   div.tab(class=active('db')):         +a(redirect.db)         Accessibility DB
   div.tab(class=active('blog')):       +a(redirect.blog)       Blog
