--- a/src/pug/alpakka/_title.pug
+++ b/src/pug/alpakka/_title.pug
@@ -1,8 +1,12 @@
 -
   const active = (bool) => bool ? 'active' : 'inactive'
 
-h1.dynamic
-  a(class=active(PAGE=='alpakka') href='/alpakka') Alpakka
+h1.primary
+  a(class=active(SECTION=='alpakka') href='/alpakka') Alpakka
+  a(class=active(SECTION=='kapybara') href='/kapybara') Kapybara
+
+h1.secondary
+  a.sub(class=active(PAGE=='alpakka') href='/alpakka') Overview
   a.sub(class=active(SECTION_2=='manual') href=redirect.alpakkaManual) Manual
   a.sub(class=active(PAGE=='gallery') href='/alpakka/gallery') Gallery
   a.sub(class=active(PAGE=='components') href='/alpakka/components') Components
